
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int printf (char*,...) ;

int dosusage(char *apcfilename)
{
 printf("----------------------------\n");
 printf("\nUsage: %s <number>\n", apcfilename);
 printf("where number is either:\n");
 printf("1. crash linux\n");
 printf("2. crash httpd\n");
 printf("3. crash klogd\n");
 printf("4. crash crond\n");
 printf("5. crash syslogd\n");
 printf("6. crash inetd\n");
 printf("7. crash indentd\n");
 printf("8. crash sendmaild\n\n");
 return 0;
}
