; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_251.c_dosusage.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_251.c_dosusage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [30 x i8] c"----------------------------\0A\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"\0AUsage: %s <number>\0A\00", align 1
@.str.2 = private unnamed_addr constant [25 x i8] c"where number is either:\0A\00", align 1
@.str.3 = private unnamed_addr constant [16 x i8] c"1. crash linux\0A\00", align 1
@.str.4 = private unnamed_addr constant [16 x i8] c"2. crash httpd\0A\00", align 1
@.str.5 = private unnamed_addr constant [16 x i8] c"3. crash klogd\0A\00", align 1
@.str.6 = private unnamed_addr constant [16 x i8] c"4. crash crond\0A\00", align 1
@.str.7 = private unnamed_addr constant [18 x i8] c"5. crash syslogd\0A\00", align 1
@.str.8 = private unnamed_addr constant [16 x i8] c"6. crash inetd\0A\00", align 1
@.str.9 = private unnamed_addr constant [18 x i8] c"7. crash indentd\0A\00", align 1
@.str.10 = private unnamed_addr constant [21 x i8] c"8. crash sendmaild\0A\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dosusage(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %4 = load i8*, i8** %2, align 8
  %5 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0), i8* %4)
  %6 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0))
  %7 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.3, i64 0, i64 0))
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.4, i64 0, i64 0))
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.5, i64 0, i64 0))
  %10 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.6, i64 0, i64 0))
  %11 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.7, i64 0, i64 0))
  %12 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.8, i64 0, i64 0))
  %13 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.9, i64 0, i64 0))
  %14 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.10, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
